# cpsc-319

./: .gitignore  CPSC-319.code-workspace  README.md
ai-service/: requirements.txt
backend/: .env.template  main.py  pyproject.toml  requirements.txt  testrag.py
backend/app/: config.py  dependencies.py  models.py
backend/app/routers/: auth.py  dashboard.py  stories.py
backend/app/service/: README.md  ai_service.py  prompts.py
backend/db/: README.md  add_user.sql  init_db.sql  setup_db.sql
backend/tests/: test_ai_pipeline.py  test_main.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: appbar.tsx  donors.tsx  list_stories.tsx  login_appbar.tsx  org_cards.tsx  org_details.tsx  protected_route.tsx  stat_cards.tsx
frontend/src/pages/: dashboard.tsx  generated_story.tsx  home.tsx  login.tsx  org_impacts.tsx
